--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Dashboard</h1>
+
+<% if user_signed_in? %>
+    <%= link_to "Sign out", destroy_user_session_path, method: :delete, data: {  turbo_method: :delete } %>
+    <%= link_to "Edit registration", edit_user_registration_path %>
+<% elsif !admin_signed_in? %>
+    <%= link_to "Sign up as User", new_user_registration_path %>
+    <br>
+    <%= link_to "Sign in as User", new_user_session_path %>
+<% end %>
+<h3>Admin?</h3>
+<% if admin_signed_in? %>
+    <%= link_to "Sign out", destroy_admin_session_path, method: :delete, data: {  turbo_method: :delete } %>
+    <%= link_to "Edit registration", edit_admin_registration_path %>
+<% elsif !user_signed_in? %>
+    <%= link_to "Sign up as admin", new_admin_registration_path %> <%# delete this after making an admin %>
+    <br>
+    <%= link_to "Sign in as admin", new_admin_session_path %>
+<% end %>
